--- a/websidan.html
+++ b/websidan.html
@@ -7,10 +7,12 @@
 </head>
 <body>
 
-    <div><a href="external.html">Click for externally sourced recipes</a></div>
+    <div><a href="external api/external.html">Click for externally sourced recipes</a></div>
 
-    <input type="text" id="searchbar" placeholder="Search our database...">
+    <input type="text" id="searchbar" placeholder="Search recipes">
+
     <button onclick="performSearch()">Search</button>
+    
     <div id="search-results"></div>
 
     <script src="searcherScript.js"></script>
