--- a/searchSidan.html
+++ b/searchSidan.html
@@ -9,17 +9,20 @@
 <body>
     <header>
         <div class="logo">
-            <img src="Hestia-symbol.png" alt="Logo">
+            <img class="logo" src="Hestia-symbol.png" alt="Logo">
         </div>
+
+        
+
         <nav>
             <ul>
-                <li><a id="inuse">Home</a></li>
+                <li><a href="#" id="inuse">Home</a></li>
                 <li><a href="aboutSidan.html">About</a></li>
                 <li><a href="contactSidan.html">Contact</a></li>
             </ul>
         </nav>
         <div class="search">
-            <input type="text" placeholder="Search...">
+            <input id="searchbar" type="text" placeholder="Search...">
         </div>
     </header>
 
@@ -28,6 +31,9 @@
         <div id="content"></div>
     </main>
 
+
+
+    <footer>asdasdasd</footer>
 
     <script src="scrollerScript.js"></script>
     <script src="xmlhttpsResquest.js"></script>
