--- a/aboutSidan.html
+++ b/aboutSidan.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <div><a href="external api/external.html">Click for externally sourced recipes</a></div>
+    <div><a href="searchSidan.html">Click for externally sourced recipes</a></div>
 
     <input type="text" id="searchbar" placeholder="Search recipes">
 
