--- a/searchSidan.html
+++ b/searchSidan.html
@@ -10,25 +10,34 @@
     <header>
         <div class="logo">
             <img class="logo" src="Hestia-symbol.png" alt="Logo">
-        </div>
-
-        
+        </div>        
 
         <nav>
-            <ul>
-                <li><a href="#" id="inuse">Home</a></li>
-                <li><a href="aboutSidan.html">About</a></li>
-                <li><a href="contactSidan.html">Contact</a></li>
-            </ul>
+    <ul>
+        <li><a href="#" id="inuse">Home</a></li>
+        <li><a href="aboutSidan.html">About</a></li>
+        <li><a href="contactSidan.html">Contact</a></li>
+    </ul>
         </nav>
+
         <div class="search">
             <input id="searchbar" type="text" placeholder="Search...">
         </div>
     </header>
 
 
+
     <main>
-        <div id="content"></div>
+        <div id="content">
+            <div class="content-section">1</div>
+            <div class="content-section">2</div>
+            <div class="content-section">3</div>
+            <div class="content-section">4</div>
+            <div class="content-section">5</div>
+            <div class="content-section">6</div>
+            <div class="content-section">7</div>
+            <div class="content-section">8</div>
+        </div>
     </main>
 
 
