--- a/aboutSidan.html
+++ b/aboutSidan.html
@@ -3,18 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://developer.edamam.com/attribution/badge.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
+
     <title>Hestia</title>
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img class="logo" src="images/Hestia-symbol.png" alt="Logo">
+        </div>
 
-    <div><a href="searchSidan.html">Click for externally sourced recipes</a></div>
+        <nav>
+            <ul>
+                <li><a href="searchSidan.html" id="inuse">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="contactSidan.html">Contact</a></li>
+            </ul>
+        </nav>
 
-    <input type="text" id="searchbar" placeholder="Search recipes">
+        <div class="search">
+            <input id="searchbar" type="text" placeholder="Search...">
+        </div>
+    </header>
 
-    <button onclick="performSearch()">Search</button>
+    <main>
+        <section>
+        <h1>Our mission</h1>
+        <p>This is what we're all about.</p>
+        </section>
+
+        <section>
+        <h2>We care about the <span class="fancypants-font">EnVirOnMEnT!!</span></h2>
+        <p>And this is what we do about it: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br>
+           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br>
+           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, <br>
+           sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+
+    </main>
+
+    <footer id="positionToBottom">
+        <div class="footer-content">
+            <div id="edamam-badge" data-color="white"></div>
+        </div>
+    </footer>
     
-    <div id="search-results"></div>
-
-    <script src="searcherScript.js"></script>
 </body>
 </html>
