--- a/searchSidan.html
+++ b/searchSidan.html
@@ -3,46 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://developer.edamam.com/attribution/badge.js"></script>
     <title>My Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img class="logo" src="Hestia-symbol.png" alt="Logo">
-        </div>        
 
-        <nav>
-    <ul>
-        <li><a href="#" id="inuse">Home</a></li>
-        <li><a href="aboutSidan.html">About</a></li>
-        <li><a href="contactSidan.html">Contact</a></li>
-    </ul>
-        </nav>
+<header>
+    <div class="logo">
+        <img class="logo" src="images/Hestia-symbol.png" alt="Logo">
+    </div>        
 
-        <div class="search">
-            <input id="searchbar" type="text" placeholder="Search...">
+    <nav>
+        <ul>
+            <li><a href="#" id="inuse">Home</a></li>
+            <li><a href="aboutSidan.html">About</a></li>
+            <li><a href="contactSidan.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <div class="search">
+        <input id="searchbar" type="text" placeholder="Search...">
+    </div>
+</header>
+
+
+
+<main>
+    <div id="search-results">
+        <div class="content-section">
+
         </div>
-    </header>
+        <div class="content-section">2</div>
+        <div class="content-section">3</div>
+        <div class="content-section">4</div>
+        <div class="content-section">5</div>
+        <div class="content-section">6</div>
+        <div class="content-section">7</div>
+        <div class="content-section">8</div>
+    </div>
+
+</main>
 
 
+<footer>
+    <div class="footer-content">
+        <div id="edamam-badge" data-color="white"></div>
+        
+        <ul>
+            <li>alexander.gustavsson@skola.taby.se</li>
+            <li>Åva Gymnasium Te22A</li>
+        </ul>
+    </div>
+</footer>
 
-    <main>
-        <div id="content">
-            <div class="content-section">1</div>
-            <div class="content-section">2</div>
-            <div class="content-section">3</div>
-            <div class="content-section">4</div>
-            <div class="content-section">5</div>
-            <div class="content-section">6</div>
-            <div class="content-section">7</div>
-            <div class="content-section">8</div>
-        </div>
-    </main>
-
-
-
-    <footer>asdasdasd</footer>
 
     <script src="scrollerScript.js"></script>
     <script src="xmlhttpsResquest.js"></script>
