--- a/aboutSidan.html
+++ b/aboutSidan.html
@@ -44,11 +44,12 @@
 
     </main>
 
-    <footer id="positionToBottom">
+    <footer>
         <div class="footer-content">
             <div id="edamam-badge" data-color="white"></div>
         </div>
     </footer>
+    <!-- Hade inte mycket att lägga i footern -->
     
 </body>
 </html>
