--- a/contactSidan.html
+++ b/contactSidan.html
@@ -55,9 +55,9 @@
                 </tr>
             </tbody>
         </table>
-        <br>
+        
+        <p>För korta meddelanden är det <br>lämpligt att använda detta formulär:</p>
         <form>
-            <label for="email">För korta meddelanden är det lämpligt att använda detta formulär:</label><br>
             <input type="email" id="email" name="email" placeholder="example@email.gimme" required>
             <input type="text" id="ärende" name="ärende" placeholder="ärendets titel" required><br>
     
@@ -72,11 +72,8 @@
     <footer id="positionToBottom">
         <div class="footer-content">
             <div id="edamam-badge" data-color="white"></div>
-            <ul>
-                <li>alexander.gustavsson@skola.taby.se</li>
-                <li>Åva Gymnasium Te22A</li>
-            </ul>
         </div>
     </footer>
+    <!-- Hade inte mycket att lägga i footern -->
 </body>
 </html>
