--- a/searchSidan.html
+++ b/searchSidan.html
@@ -8,39 +8,29 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img class="logo" src="images/Hestia-symbol.png" alt="Logo">
+        </div>
 
-<header>
-    <div class="logo">
-        <img class="logo" src="images/Hestia-symbol.png" alt="Logo">
-    </div>        
+        <nav>
+            <ul>
+                <li><a href="#" id="inuse">Home</a></li>
+                <li><a href="aboutSidan.html">About</a></li>
+                <li><a href="contactSidan.html">Contact</a></li>
+            </ul>
+        </nav>
 
-    <nav>
-        <ul>
-            <li><a href="#" id="inuse">Home</a></li>
-            <li><a href="aboutSidan.html">About</a></li>
-            <li><a href="contactSidan.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <div class="search">
-        <input id="searchbar" type="text" placeholder="Search...">
-    </div>
-</header>
+        <div class="search">
+            <input id="searchbar" type="text" placeholder="Search...">
+        </div>
+    </header>
 
 
 
 <main>
     <div id="search-results">
-        <div class="content-section">
-
-        </div>
-        <div class="content-section">2</div>
-        <div class="content-section">3</div>
-        <div class="content-section">4</div>
-        <div class="content-section">5</div>
-        <div class="content-section">6</div>
-        <div class="content-section">7</div>
-        <div class="content-section">8</div>
+        Search for a recipe or ingredient in the top right, and we'll link it to you here!
     </div>
 
 </main>
@@ -49,11 +39,6 @@
 <footer>
     <div class="footer-content">
         <div id="edamam-badge" data-color="white"></div>
-        
-        <ul>
-            <li>alexander.gustavsson@skola.taby.se</li>
-            <li>Åva Gymnasium Te22A</li>
-        </ul>
     </div>
 </footer>
 
